<resources>
    <string name="app_name">MProf</string>
    <string name="action_settings">Parametres</string>
    <string name="title_activity_add_role">AddRole</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_activity_login">Connexion</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe *</string>
    <string name="action_sign_in">SE connecter</string>
    <string name="action_sign_in_short">Se loguer</string>
    <string name="error_invalid_email">Cette edresse email est invalide</string>
    <string name="error_invalid_password">Le mot de passe est trop court</string>
    <string name="error_incorrect_password">Le mot de passe est incorrect</string>
    <string name="error_field_required">Ce champ est obligatoire</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="role">Role</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="adress">Addresse </string>
    <string name="rue">Rue: </string>
    <string name="localite">Localité</string>
    <string name="cp">CP</string>
    <string name="email">email</string>
    <string name="password1">Password</string>
    <string name="password2">Confirmer mot de passe</string>
    <string name="Session">Session</string>
    <string name="signupButton">Créer un compte</string>
    <string name="cancel">Annuler</string>
    <string name="tel">Tel</string>
    <string name="birthdate">Date de naissance</string>
    <string name="level">Niveau scolaire</string>
    <string name="savePassword">Sauveer</string>
    <string name="sendButton">Envoyer</string>
    <string name="repButton">Repondre</string>
    <string name="profil_bar">Profil</string>
    <string name="readMessage_bar">Read message</string>
    <string name="sendMessage_bar">New message</string>
    <string name="info_bar">Info user</string>
    <string name="addSearchButton">Home</string>
    <string name="listMessage_bar">Message</string>
    <string name="home_bar">Message</string>
    <string name="rue_num">n°</string>
</resources>
