<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignupActivity">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@android:color/holo_blue_bright"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="false"
            tools:layout_editor_absoluteY="0dp" tools:layout_editor_absoluteX="69dp" tools:ignore="MissingConstraints">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:verticalScrollbarPosition="right"
                android:layout_gravity="center_vertical"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:orientation="vertical">

            <EditText
                    android:id="@+id/nom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nom"
                    android:inputType="text"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
            />
            <EditText
                    android:id="@+id/prenom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prenom"
                    android:inputType="text"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
            />
            <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
            />
            <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password1"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
            />
            <EditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password2"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
            />
            <EditText
                    android:id="@+id/tel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tel"
                    android:inputType="phone"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textAlignment="textStart"/>


            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="@android:color/white"
                      android:textColorHint="@android:color/white"
                      android:text="@string/adress"
                      android:id="@+id/Address" android:baselineAligned="false"/>
            <TableLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                <TableRow android:layout_height="wrap_content" android:layout_width="361dp">

                    <EditText
                            android:id="@+id/rue"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/rue"
                            android:inputType="text"
                            android:textColor="@android:color/white"
                            android:textColorHint="@android:color/white"
                    />
                    <EditText
                            android:id="@+id/rue_num"
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/rue_num"
                            android:inputType="text"
                            android:textColor="@android:color/white"
                            android:textColorHint="@android:color/white"
                            tools:ignore="LabelFor" android:singleLine="false" android:baselineAligned="false"/>
                </TableRow>
                <TableRow>
                    <EditText
                            android:id="@+id/localite"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/localite"
                            android:inputType="text"
                            android:textColor="@android:color/white"
                            android:textColorHint="@android:color/white"
                    />
                    <EditText
                            android:id="@+id/cp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:hint="@string/cp"
                            android:textColor="@android:color/white"
                            android:textColorHint="@android:color/white"
                    />
                </TableRow>
            </TableLayout>
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:textColor="@android:color/white"
                    android:layout_gravity="right"
            >
                <Button
                        android:id="@+id/signupButton"
                        android:layout_width="148dp"
                        android:layout_height="40dp"
                        android:text="@string/signupButton"
                        android:textColor="@android:color/white"
                        android:background="@android:color/holo_orange_dark"
                        android:layout_marginRight="2dp"
                />
                <Button
                        android:id="@+id/cancelButton"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:text="@string/cancel"
                        android:textColor="@android:color/white"
                        android:background="@android:color/holo_orange_dark"
                        android:layout_marginRight="5dp"
                />
            </LinearLayout>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ro"
                    android:textColor="@android:color/white"
            />
        </LinearLayout>
    </ScrollView>
    <android.support.constraint.Group android:layout_width="wrap_content" android:layout_height="wrap_content"
                                      android:id="@+id/group"/>
</android.support.constraint.ConstraintLayout>